src/main/bkool/parser/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'boolean'", "'break'", "'class'", "'continue'", 
                     "'do'", "'else'", "'extends'", "'float'", "'if'", "'int'", 
                     "'string'", "'then'", "'for'", "'return'", "'true'", 
                     "'false'", "'void'", "'nil'", "'this'", "'final'", 
                     "'static'", "'to'", "'downto'", "'+'", "'-'", "'*'", 
                     "'/'", "'\\'", "'%'", "'!='", "'=='", "'<'", "'>'", 
                     "'<='", "'>='", "'||'", "'&&'", "'!'", "'^'", "'new'", 
                     "'='", "':='", "'['", "']'", "'{'", "'}'", "'('", "')'", 
                     "';'", "':'", "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN", "BREAK", "CLASS", "CONTINUE", 
                      "DO", "ELSE", "EXTENDS", "FLOAT", "IF", "INT", "STRING", 
                      "THEN", "FOR", "RETURN", "TRUE", "FALSE", "VOID", 
                      "NIL", "THIS", "FINAL", "STATIC", "TO", "DOWNTO", 
                      "ADD", "SUB", "MUL", "FLOAT_DIV", "INT_DIV", "MOD", 
                      "NEQ", "EQ", "LT", "GT", "LTE", "GTE", "OR", "AND", 
                      "NOT", "CONCAT", "NEW", "ASSIGN", "ASSIGN_EQ", "LSB", 
                      "RSB", "LP", "RP", "LB", "RB", "SEMI", "COLON", "DOT", 
                      "COMMA", "BOOL_LIT", "INT_LIT", "FLOAT_LIT", "FLOAT_LIT_case1", 
                      "FLOAT_LIT_case2", "STRING_LIT", "ID", "COMMENT", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_declaration = 1
    RULE_members = 2
    RULE_attribute_declare = 3
    RULE_mutable_declare = 4
    RULE_immutable_declare = 5
    RULE_list_var_declare = 6
    RULE_list_var_declare_immu = 7
    RULE_method_declare = 8
    RULE_constructor_declare = 9
    RULE_var_declare = 10
    RULE_var_declare_immu = 11
    RULE_list_params = 12
    RULE_parameter = 13
    RULE_parameter_type = 14
    RULE_return_type = 15
    RULE_type_attribute = 16
    RULE_array_type = 17
    RULE_class_type = 18
    RULE_primitive_type = 19
    RULE_block_statement = 20
    RULE_local_attribute = 21
    RULE_statement = 22
    RULE_assignment_statement = 23
    RULE_lhs = 24
    RULE_attribute_invo = 25
    RULE_if_statement = 26
    RULE_for_statement = 27
    RULE_break_statement = 28
    RULE_continue_statement = 29
    RULE_return_statement = 30
    RULE_method_invocation_statement = 31
    RULE_obj_methodinvo = 32
    RULE_bool_exp = 33
    RULE_int_exp = 34
    RULE_return_exp = 35
    RULE_exp = 36
    RULE_exp1 = 37
    RULE_exp2 = 38
    RULE_exp3 = 39
    RULE_exp4 = 40
    RULE_exp5 = 41
    RULE_exp6 = 42
    RULE_exp7 = 43
    RULE_exp8 = 44
    RULE_exp9 = 45
    RULE_exp10 = 46
    RULE_operands = 47
    RULE_index_exp = 48
    RULE_object_create = 49
    RULE_list_exp = 50
    RULE_list_exps = 51
    RULE_literals = 52
    RULE_array_literal = 53
    RULE_list_literal_basic = 54
    RULE_literal_basic = 55

    ruleNames =  [ "program", "class_declaration", "members", "attribute_declare", 
                   "mutable_declare", "immutable_declare", "list_var_declare", 
                   "list_var_declare_immu", "method_declare", "constructor_declare", 
                   "var_declare", "var_declare_immu", "list_params", "parameter", 
                   "parameter_type", "return_type", "type_attribute", "array_type", 
                   "class_type", "primitive_type", "block_statement", "local_attribute", 
                   "statement", "assignment_statement", "lhs", "attribute_invo", 
                   "if_statement", "for_statement", "break_statement", "continue_statement", 
                   "return_statement", "method_invocation_statement", "obj_methodinvo", 
                   "bool_exp", "int_exp", "return_exp", "exp", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", 
                   "exp10", "operands", "index_exp", "object_create", "list_exp", 
                   "list_exps", "literals", "array_literal", "list_literal_basic", 
                   "literal_basic" ]

    EOF = Token.EOF
    BOOLEAN=1
    BREAK=2
    CLASS=3
    CONTINUE=4
    DO=5
    ELSE=6
    EXTENDS=7
    FLOAT=8
    IF=9
    INT=10
    STRING=11
    THEN=12
    FOR=13
    RETURN=14
    TRUE=15
    FALSE=16
    VOID=17
    NIL=18
    THIS=19
    FINAL=20
    STATIC=21
    TO=22
    DOWNTO=23
    ADD=24
    SUB=25
    MUL=26
    FLOAT_DIV=27
    INT_DIV=28
    MOD=29
    NEQ=30
    EQ=31
    LT=32
    GT=33
    LTE=34
    GTE=35
    OR=36
    AND=37
    NOT=38
    CONCAT=39
    NEW=40
    ASSIGN=41
    ASSIGN_EQ=42
    LSB=43
    RSB=44
    LP=45
    RP=46
    LB=47
    RB=48
    SEMI=49
    COLON=50
    DOT=51
    COMMA=52
    BOOL_LIT=53
    INT_LIT=54
    FLOAT_LIT=55
    FLOAT_LIT_case1=56
    FLOAT_LIT_case2=57
    STRING_LIT=58
    ID=59
    COMMENT=60
    WS=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def class_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Class_declarationContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.Class_declarationContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 112
                self.class_declaration()
                self.state = 115 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.CLASS):
                    break

            self.state = 117
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def members(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.MembersContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.MembersContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_class_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declaration" ):
                return visitor.visitClass_declaration(self)
            else:
                return visitor.visitChildren(self)




    def class_declaration(self):

        localctx = BKOOLParser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(BKOOLParser.CLASS)
            self.state = 120
            self.match(BKOOLParser.ID)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDS:
                self.state = 121
                self.match(BKOOLParser.EXTENDS)
                self.state = 122
                self.match(BKOOLParser.ID)


            self.state = 125
            self.match(BKOOLParser.LP)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.VOID) | (1 << BKOOLParser.FINAL) | (1 << BKOOLParser.STATIC) | (1 << BKOOLParser.ID))) != 0):
                self.state = 126
                self.members()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MembersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_declare(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute_declareContext,0)


        def method_declare(self):
            return self.getTypedRuleContext(BKOOLParser.Method_declareContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_members

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMembers" ):
                return visitor.visitMembers(self)
            else:
                return visitor.visitChildren(self)




    def members(self):

        localctx = BKOOLParser.MembersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_members)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.attribute_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.method_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mutable_declare(self):
            return self.getTypedRuleContext(BKOOLParser.Mutable_declareContext,0)


        def immutable_declare(self):
            return self.getTypedRuleContext(BKOOLParser.Immutable_declareContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_declare" ):
                return visitor.visitAttribute_declare(self)
            else:
                return visitor.visitChildren(self)




    def attribute_declare(self):

        localctx = BKOOLParser.Attribute_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute_declare)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.mutable_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.immutable_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mutable_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_attribute(self):
            return self.getTypedRuleContext(BKOOLParser.Type_attributeContext,0)


        def list_var_declare(self):
            return self.getTypedRuleContext(BKOOLParser.List_var_declareContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_mutable_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMutable_declare" ):
                return visitor.visitMutable_declare(self)
            else:
                return visitor.visitChildren(self)




    def mutable_declare(self):

        localctx = BKOOLParser.Mutable_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mutable_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.STATIC]:
                self.state = 142
                self.match(BKOOLParser.STATIC)
                pass
            elif token in [BKOOLParser.BOOLEAN, BKOOLParser.FLOAT, BKOOLParser.INT, BKOOLParser.STRING, BKOOLParser.VOID, BKOOLParser.ID]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 146
            self.type_attribute()
            self.state = 147
            self.list_var_declare()
            self.state = 148
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Immutable_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_attribute(self):
            return self.getTypedRuleContext(BKOOLParser.Type_attributeContext,0)


        def list_var_declare_immu(self):
            return self.getTypedRuleContext(BKOOLParser.List_var_declare_immuContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_immutable_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImmutable_declare" ):
                return visitor.visitImmutable_declare(self)
            else:
                return visitor.visitChildren(self)




    def immutable_declare(self):

        localctx = BKOOLParser.Immutable_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_immutable_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 150
                self.match(BKOOLParser.FINAL)
                pass

            elif la_ == 2:
                self.state = 151
                self.match(BKOOLParser.STATIC)
                self.state = 152
                self.match(BKOOLParser.FINAL)
                pass

            elif la_ == 3:
                self.state = 153
                self.match(BKOOLParser.FINAL)
                self.state = 154
                self.match(BKOOLParser.STATIC)
                pass


            self.state = 157
            self.type_attribute()
            self.state = 158
            self.list_var_declare_immu()
            self.state = 159
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_var_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(BKOOLParser.Var_declareContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def list_var_declare(self):
            return self.getTypedRuleContext(BKOOLParser.List_var_declareContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_list_var_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_var_declare" ):
                return visitor.visitList_var_declare(self)
            else:
                return visitor.visitChildren(self)




    def list_var_declare(self):

        localctx = BKOOLParser.List_var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_list_var_declare)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.var_declare()
                self.state = 162
                self.match(BKOOLParser.COMMA)
                self.state = 163
                self.list_var_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.var_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_var_declare_immuContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare_immu(self):
            return self.getTypedRuleContext(BKOOLParser.Var_declare_immuContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def list_var_declare_immu(self):
            return self.getTypedRuleContext(BKOOLParser.List_var_declare_immuContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_list_var_declare_immu

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_var_declare_immu" ):
                return visitor.visitList_var_declare_immu(self)
            else:
                return visitor.visitChildren(self)




    def list_var_declare_immu(self):

        localctx = BKOOLParser.List_var_declare_immuContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_list_var_declare_immu)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.var_declare_immu()
                self.state = 169
                self.match(BKOOLParser.COMMA)
                self.state = 170
                self.list_var_declare_immu()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.var_declare_immu()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_type(self):
            return self.getTypedRuleContext(BKOOLParser.Return_typeContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def list_params(self):
            return self.getTypedRuleContext(BKOOLParser.List_paramsContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def block_statement(self):
            return self.getTypedRuleContext(BKOOLParser.Block_statementContext,0)


        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def constructor_declare(self):
            return self.getTypedRuleContext(BKOOLParser.Constructor_declareContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_method_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_declare" ):
                return visitor.visitMethod_declare(self)
            else:
                return visitor.visitChildren(self)




    def method_declare(self):

        localctx = BKOOLParser.Method_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method_declare)
        try:
            self.state = 187
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKOOLParser.STATIC]:
                    self.state = 175
                    self.match(BKOOLParser.STATIC)
                    pass
                elif token in [BKOOLParser.BOOLEAN, BKOOLParser.FLOAT, BKOOLParser.INT, BKOOLParser.STRING, BKOOLParser.VOID, BKOOLParser.ID]:
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 179
                self.return_type()
                self.state = 180
                self.match(BKOOLParser.ID)
                self.state = 181
                self.match(BKOOLParser.LB)
                self.state = 182
                self.list_params()
                self.state = 183
                self.match(BKOOLParser.RB)
                self.state = 184
                self.block_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.constructor_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constructor_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def list_params(self):
            return self.getTypedRuleContext(BKOOLParser.List_paramsContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def block_statement(self):
            return self.getTypedRuleContext(BKOOLParser.Block_statementContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_constructor_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructor_declare" ):
                return visitor.visitConstructor_declare(self)
            else:
                return visitor.visitChildren(self)




    def constructor_declare(self):

        localctx = BKOOLParser.Constructor_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_constructor_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(BKOOLParser.ID)
            self.state = 190
            self.match(BKOOLParser.LB)
            self.state = 191
            self.list_params()
            self.state = 192
            self.match(BKOOLParser.RB)
            self.state = 193
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKOOLParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(BKOOLParser.ExpContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_var_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declare" ):
                return visitor.visitVar_declare(self)
            else:
                return visitor.visitChildren(self)




    def var_declare(self):

        localctx = BKOOLParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(BKOOLParser.ID)
            self.state = 198
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.ASSIGN:
                self.state = 196
                self.match(BKOOLParser.ASSIGN)
                self.state = 197
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declare_immuContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKOOLParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(BKOOLParser.ExpContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_var_declare_immu

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declare_immu" ):
                return visitor.visitVar_declare_immu(self)
            else:
                return visitor.visitChildren(self)




    def var_declare_immu(self):

        localctx = BKOOLParser.Var_declare_immuContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_var_declare_immu)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 200
            self.match(BKOOLParser.ID)
            self.state = 201
            self.match(BKOOLParser.ASSIGN)
            self.state = 202
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_paramsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
